# codegen

./: buildComputeSFO.m  build_InterpolateCSIAndRemoveCSD.m  build_computePhaseSlopes_C.m  calculatePhaseSlope.m  computePhaseSlopes.prj  computeSFO.m  side_info.txt  side_info_3e2_19.999.txt  side_info_3e2_99.7.txt  side_info_3e2_99.9.txt  side_info_3e2_normal.txt  side_info_4e2_normal.txt  side_info_5e2_normal.txt  side_info_6e2_normal.txt
computeSFO/: CMakeLists.txt  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  computeSFO_rtw.mk  rtw_proj.tmw
computeSFO/examples/: main.c  main.h
computeSFO/html/: report.mldatx
computeSFO/include/: computeSFO.h  computeSFO_emxAPI.h  computeSFO_emxutil.h  computeSFO_types.h  rtGetInf.h  rtGetNaN.h  rt_defines.h  rt_nonfinite.h  rtwtypes.h
computeSFO/include/Halide/: Halide.h
computeSFO/include/ceres/: camera_projection_factor.hpp  cerescodegen_api.hpp  cerescodegen_spec.hpp  common_factors_2.hpp  imu_factor.hpp
computeSFO/include/nav/: DynamicMatrix.hpp  astarcore.hpp  astarcore_api.hpp  collisionmapcodegen_util.hpp  dynamicmatrix_util.hpp  mclcodegen_api.hpp  octomapcodegen_api.hpp  vdbmanager_api.hpp  vdbvolume_mcosutils.hpp  vdbvolumecodegen_util.hpp
computeSFO/include/shared_robotics/: CollisionGeometryImpl.hpp
computeSFO/interface/: _coder_computeSFO_api.c  _coder_computeSFO_api.h  _coder_computeSFO_info.c  _coder_computeSFO_info.h  _coder_computeSFO_mex.c  _coder_computeSFO_mex.h
computeSFO/src/: computeSFO.c  computeSFO_emxAPI.c  computeSFO_emxutil.c  rtGetInf.c  rtGetNaN.c  rt_nonfinite.c
(+127 files in other folders)
